# tinyRenderer

./: CMakeLists.txt  README.md  geometry.cpp  geometry.h  global.cpp  global.h  line.cpp  main.cpp  model.cpp  model.h  program  shader.cpp  shader.h  tgaimage.cpp  tgaimage.h  triangle.cpp  triangle.h  zbuffer.h
images/: Bump-30.tga  Bump-330-t.tga  Bump-330.tga  Goraud-30.tga  Goraud-330.tga  Goraud-60.tga  NormalBump-30.tga  NormalBump.tga  Phong-30.tga  Phong-330.tga  Phong.tga  PhongShading.tga  head-2048.tga  old_boat.tga  persp_head_model.tga  persp_head_model_v2.tga  rotation-120.tga  rotation-150.tga  rotation-200.tga  rotation-50.tga  rotation-60-fixed.tga  rotation-91.tga  rotation-92.tga  rotation-93.tga  rotation-95.tga  rotation.tga  shadow_head_model_fixed.tga  shadow_head_model_light_above.tga  shadow_head_model_light_below.tga  test-m.tga  test_phong_shader.tga  test_phong_shader_model_view.tga  test_phong_shader_model_view2.tga  test_phong_shader_model_view4.tga  test_phong_shader_model_view5.tga  test_shader.tga  text_head_model.tga  triangle_v2.tga
images/afraican_head/: Goraud-0-l.tga  Goraud-0.tga  Goraud-front-light-right.tga  Phong-0-l.tga  Phong-0.tga  Phong-230.tga  Phong-330-1-no-shadow.tga  Phong-90.tga  Phong-front-light-left.tga  Phong-shadow-fail-2.tga  Phong-shadow-fail.tga  Phong-shadow-magic-40.tga  Phong-shadow-magic.tga  Phong-shadow.tga  Phong-spec-front-light-right.tga  Phong-spec-front.tga  Phong-spec.tga  depth-Phong-230-amb.tga  depth-Phong-230.tga  depth.tga
images/basic/: dot.tga  head.tga  line.tga  line2.tga  triangle.tga  (+1 more)
(+35 files in other folders)
